--- a/templates/tasks/index.html
+++ b/templates/tasks/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestionnaire de Tâches</title>
+{% extends "base.html" %}
+
+{% block title %}Gestionnaire de Tâches{% endblock %}
+
+{% block extra_css %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/tasks.css') }}">
-</head>
-<body>
+{% endblock %}
+
+{% block content %}
     <div class="container">
         <h1>📝 Gestionnaire de Tâches</h1>
         
@@ -56,5 +56,4 @@
             {% endif %}
         </div>
     </div>
-</body>
-</html>
+{% endblock %}
