--- a/templates/tasks/index.html
+++ b/templates/tasks/index.html
@@ -15,6 +15,7 @@
         <div class="add-task">
             <form method="POST" action="{{ url_for('tasks.add_task') }}">
                 <input type="text" name="title" placeholder="Nouvelle tâche..." required>
+                <input type="datetime-local" name="due_date">
                 <button type="submit">Ajouter</button>
             </form>
         </div>
