--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -4,6 +4,7 @@
         
         <ul class="navbar-menu">
             <li><a href="{{ url_for('tasks.home') }}" class="navbar-link">📝 Tâches</a></li>
+            <li><a href="{{ url_for('tasks.categories') }}" class="navbar-link">🏷️ Catégories</a></li>
             <li><a href="#" class="navbar-link disabled">💰 Finances</a></li>
             <li><a href="#" class="navbar-link disabled">📅 Agenda</a></li>
             <li><a href="#" class="navbar-link disabled">📝 Notes</a></li>
